--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.1",
+    "react-moving-text": "^0.0.7",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "semantic-ui-react": "^2.1.5",
